test/Programs/ValidTests/fEqg/fEqg.fst
main : Int
main = f 5

f : Int -> Int
f = g

g : Int -> Int
g x = x
