test/Programs/InvalidTests/dupFunDecl/dupFunDecl.fst
f :: Int
f = 5
f = 6
